--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         bugs: https://github.com/${{github.repository}}/issues
 
     # Create a zip file with all files required by the module to add to the release
-    - run: zip -r ./module.zip module.json LICENSE module.js lang/ scripts/ templates/
+    - run: zip -r ./module.zip module.json LICENSE module.js lang/ scripts/ templates/ styles/
 
     # Create a release for this specific version
     - name: Update Release with Files
